derive/tests/snapshots/table_named_singleton/Singleton/get_all_singletons.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `singleton` table.
    pub fn get_all_singletons<'a>(&'a self) -> impl Iterator<Item = Singleton> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().singleton().iter()
    }
}
