derive/tests/snapshots/table_named_singleton/Singleton/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct SingletonId {
    value: u64,
}
impl Default for SingletonId {
    fn default() -> SingletonId {
        SingletonId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for SingletonId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "SingletonId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for SingletonId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Singleton> for SingletonId {
    fn from(value: &Singleton) -> Self {
        SingletonId {
            value: value.id.clone(),
        }
    }
}
impl From<&Singleton> for Option<SingletonId> {
    fn from(value: &Singleton) -> Option<SingletonId> {
        Some(SingletonId {
            value: value.id.clone(),
        })
    }
}
impl From<&SingletonId> for Option<SingletonId> {
    fn from(value: &SingletonId) -> Option<SingletonId> {
        use crate::spacetimedsl::Wrapper;
        Some(SingletonId::new(value.value()))
    }
}
impl From<&SingletonId> for SingletonId {
    fn from(value: &SingletonId) -> Self {
        use crate::spacetimedsl::Wrapper;
        SingletonId::new(value.value())
    }
}
impl Singleton {
    ///
    pub fn get_id(&self) -> SingletonId {
        use crate::spacetimedsl::Wrapper;
        SingletonId::new(self.id.clone())
    }
}

// Generated DSL methods:
// count_of_all_singletons
// create_singleton
// delete_singleton_by_id
// get_all_singletons
// get_singleton_by_id
